[package]
name = "muasm_parser"
version = "0.1.0"
authors = ["Emmanuel Pescosta <emmanuelpescosta099@gmail.com>"]
edition = "2018"
description = "µASM Parser"
license = "Apache-2.0"
repository = "https://github.com/emmanuel099/muasm-parser"
readme = "README.md"
keywords = ["parser", "muasm", "parsing"]
categories = ["parsing"]

[dependencies]
nom = "6.0.0"
enum-display-derive = "0.1.0"
